Initialize exchange data for analyse api implementation
